# RTCW-SP

./: .gitignore  3party.cmake  CMakeLists.txt  README.md  TODO
src/: wolf.sln  wolf.vcxproj  wolf.vcxproj.filters
src/botai/: ai_chat.c  ai_chat.h  ai_cmd.c  ai_cmd.h  ai_dmnet.c  ai_dmnet.h  ai_dmq3.c  ai_dmq3.h  ai_main.c  ai_main.h  ai_team.c  ai_team.h  botai.h  chars.h  inv.h  match.h  syn.h
src/botlib/: CMakeLists.txt  aasfile.h  be_aas.h  be_aas_bsp.h  be_aas_bspq3.c  be_aas_cluster.c  be_aas_cluster.h  be_aas_debug.c  be_aas_debug.h  be_aas_def.h  be_aas_entity.c  be_aas_entity.h  be_aas_file.c  be_aas_file.h  be_aas_funcs.h  be_aas_main.c  be_aas_main.h  be_aas_move.c  be_aas_move.h  be_aas_optimize.c  be_aas_optimize.h  be_aas_reach.c  be_aas_reach.h  be_aas_route.c  be_aas_route.h  be_aas_routealt.c  be_aas_routealt.h  be_aas_routetable.c  be_aas_routetable.h  be_aas_sample.c  be_aas_sample.h  be_ai_char.c  be_ai_chat.c  be_ai_gen.c  be_ai_goal.c  be_ai_move.c  be_ai_weap.c  be_ai_weight.c  be_ai_weight.h  be_ea.c  (+20 more)
src/bspc/: _files.c  aas_areamerging.c  aas_areamerging.h  aas_cfg.c  aas_cfg.h  aas_create.c  aas_create.h  aas_edgemelting.c  aas_edgemelting.h  aas_facemerging.c  aas_facemerging.h  aas_file.c  aas_file.h  aas_gsubdiv.c  aas_gsubdiv.h  aas_map.c  aas_map.h  aas_prunenodes.c  aas_prunenodes.h  aas_store.c  aas_store.h  be_aas_bspc.c  be_aas_bspc.h  brushbsp.c  bspc.c  csg.c  faces.c  glfile.c  l_bsp_ent.c  l_bsp_ent.h  l_bsp_hl.c  l_bsp_hl.h  l_bsp_q1.c  l_bsp_q1.h  l_bsp_q2.c  l_bsp_q2.h  l_bsp_q3.c  l_bsp_q3.h  l_bsp_sin.c  l_bsp_sin.h  (+34 more)
src/cgame/: CMakeLists.txt  cg_consolecmds.c  cg_draw.c  cg_drawtools.c  cg_effects.c  cg_ents.c  cg_event.c  cg_flamethrower.c  cg_info.c  cg_local.h  cg_localents.c  cg_main.c  cg_marks.c  cg_newDraw.c  cg_particles.c  cg_players.c  cg_playerstate.c  cg_predict.c  cg_public.h  cg_scoreboard.c  cg_servercmds.c  cg_snapshot.c  cg_sound.c  cg_syscalls.c  cg_trails.c  cg_view.c  cg_weapons.c  cgame.vcxproj  cgame.vcxproj.filters  tr_types.h
src/client/: cl_cgame.c  cl_cin.c  cl_console.c  cl_input.c  cl_keys.c  cl_main.c  cl_net_chan.c  cl_parse.c  cl_scrn.c  cl_ui.c  client.h  keys.h  snd_adpcm.c  snd_dma.c  snd_local.h  snd_mem.c  snd_mix.c  snd_public.h  snd_wavelet.c
src/extractfuncs/: ChangeLog  Conscript  extractfuncs.bat  extractfuncs.c  extractfuncs.vcxproj  extractfuncs.vcxproj.filters  l_log.c  l_log.h  l_memory.c  l_memory.h  l_precomp.c  l_precomp.h  l_script.c  l_script.h
src/ft2/: ahangles.c  ahangles.h  ahglobal.c  ahglobal.h  ahglyph.c  ahglyph.h  ahhint.c  ahhint.h  ahloader.h  ahmodule.c  ahmodule.h  ahoptim.c  ahoptim.h  ahtypes.h  autohint.h  freetype.h  ftcalc.c  ftcalc.h  ftconfig.h  ftdebug.c  ftdebug.h  ftdriver.h  fterrors.h  ftextend.c  ftextend.h  ftglyph.c  ftglyph.h  ftgrays.c  ftgrays.h  ftimage.h  ftinit.c  ftlist.c  ftlist.h  ftmemory.h  ftmm.c  ftmm.h  ftmodule.h  ftnames.c  ftnames.h  ftobjs.c  (+46 more)
src/game/: CMakeLists.txt  ai_cast.c  ai_cast.h  ai_cast_characters.c  ai_cast_debug.c  ai_cast_events.c  ai_cast_fight.c  ai_cast_fight.h  ai_cast_func_attack.c  ai_cast_func_boss1.c  ai_cast_funcs.c  ai_cast_global.h  ai_cast_script.c  ai_cast_script_actions.c  ai_cast_script_ents.c  ai_cast_sight.c  ai_cast_think.c  be_aas.h  be_ai_char.h  be_ai_chat.h  be_ai_gen.h  be_ai_goal.h  be_ai_move.h  be_ai_weap.h  be_ea.h  bg_animation.c  bg_lib.c  bg_local.h  bg_misc.c  bg_pmove.c  bg_public.h  bg_slidemove.c  botlib.h  g_active.c  g_alarm.c  g_bot.c  g_client.c  g_cmds.c  g_combat.c  g_func_decs.h  (+31 more)
src/idLib/: idAudio.h  idAudioHardware.h  idLib.h  idQ3Asnd.cpp  idSound.cpp  idSound.h  idSpeaker.cpp  idSpeaker.h
src/jpeg-6/: jerror.c  jmemnobs.c
src/macosx/: BuildRelease  CGMouseDeltaFix.h  CGMouseDeltaFix.m  CGPrivateAPI.h  GenerateQGL.pl  Performance.rtf  Q3Controller.h  Q3Controller.m  Quake3.icns  RecordDemo.zsh  macosx_display.h  macosx_display.m  macosx_glimp.h  macosx_glimp.m  macosx_glsmp_mutex.m  macosx_glsmp_null.m  macosx_glsmp_ports.m  macosx_input.m  macosx_local.h  macosx_qgl.h  macosx_sndcore.m  macosx_snddma.m  macosx_sys.m  macosx_timers.h  macosx_timers.m  timedemo.zsh
src/qcommon/: cm_load.c  cm_local.h  cm_patch.c  cm_patch.h  cm_polylib.c  cm_polylib.h  cm_public.h  cm_test.c  cm_trace.c  cmd.c  common.c  cvar.c  files.c  huffman.c  md4.c  msg.c  net_chan.c  qcommon.h  qfiles.h  unzip.c  unzip.h  vm.c  vm_interpreted.c  vm_local.h  vm_x86.c
src/renderer/: qgl.h  qgl_linked.h  ref_trin.def  tr_cmds.c  (+13 more)
src/renderer_gl/: CMakeLists.txt  anorms256.h  tr_animation.c  tr_backend.c  tr_bsp.c  tr_curve.c  tr_flares.c  tr_init.c  tr_light.c  tr_local.h  tr_mesh.c  tr_model.c  tr_noise.c  tr_scene.c  tr_shade_calc.c  tr_shader.c  tr_shadows.c  tr_sky.c
src/renderer_vk/: CMakeLists.txt  ref_trin.def  vk_init.c  vk_local.h
src/splines/: CMakeLists.txt  Splines.vcxproj  Splines.vcxproj.filters  math_angles.cpp  math_angles.h  math_matrix.cpp  math_matrix.h  math_quaternion.cpp  math_quaternion.h  math_vector.cpp  math_vector.h  q_parse.cpp  q_shared.cpp  q_splineshared.h  splines.cpp  splines.h  util_list.h  util_str.cpp  util_str.h
src/ui/: CMakeLists.txt  keycodes.h  ui.def  ui.vcxproj  ui.vcxproj.filters  ui_atoms.c  ui_gameinfo.c  ui_local.h  ui_main.c  ui_players.c  ui_public.h  ui_shared.c  ui_shared.h  ui_syscalls.c  ui_util.c
src/unix/: CMakeLists.txt  ChangeLog  Conscript-bspc  Conscript-cgame  Conscript-client  Conscript-game  Conscript-setup  Conscript-ui  Construct  README.EULA  README.Linux  README.Q3Test  bspc.vpj  build_setup.sh  build_tarball.sh  cgame.vpj  client.vpj  cons  extractfuncs.vpj  ftol.nasm  game.vpj  linux_common.c  linux_glimp.c  linux_joystick.c  linux_local.h  linux_qgl.c  linux_snd.c  matha.s  pcons-2.3.1  qasm.h  quake3.xpm  snapvector.nasm  snd_mixa.s  sys_dosa.s  ui.vpj  unix_glw.h  unix_main.c  unix_net.c  unix_shared.c  vm_x86.c  (+2 more)
src/win32/: CMakeLists.txt  glw_win.h  resource.h  win_gamma.c  win_glimp.c  win_input.c  win_local.h  win_main.c  win_net.c  win_qgl.c  win_shared.c  win_snd.c  win_syscon.c  win_wndproc.c  winquake.rc
(+10 files in other folders)
